Modified layout of donation slider on edit profile

--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -116,6 +116,15 @@
     margin-bottom: 15px;
   }
 
+  #declaration {
+    #donation {
+      margin-top: 15px;
+      #user_etkh_profile_attributes_donation_percentage_slider {
+        margin-top: 15px;
+      }
+    }
+  }
+
   #experience {
     #positions {
       margin-left: 7px;
