--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -29,6 +29,9 @@
   
   .content {
     padding-top: 30px;
+
+    .shortened-list { margin-bottom: 0px; }
+    .see-more { margin-left: 25px; }
   }
 
   .sidebar {
