--- a/app/views/etkh_profiles/positions/_edit_form.html.erb
+++ b/app/views/etkh_profiles/positions/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<div class="form">
+<div class="edit-form">
   <%= javascript_include_tag "position-form.js" %>
   <% edit = @position.id.nil? ? false : true %>
 
