Changed wording of labels for current organisation and industry sector in edit profile

--- a/app/views/etkh_profiles/_form.html.haml
+++ b/app/views/etkh_profiles/_form.html.haml
@@ -20,11 +20,11 @@
               placeholder: "e.g. Oxford, England"
 
     = ep.input :organisation,
-               label: "Current organisation you belong to",
+               label: "Current organisation",
                placeholder: "e.g. Fake College, MegaCorp"
 
     = ep.input :career_sector,
-               label: "Industry sector you work in",
+               label: "Industry sector",
                placeholder: "e.g. Financial Services"
 
     = ep.input :background,
