Added current_position field to etkh_profiles

--- a/app/views/etkh_profiles/_form.html.haml
+++ b/app/views/etkh_profiles/_form.html.haml
@@ -23,6 +23,10 @@
                label: "Current organisation",
                placeholder: "e.g. Fake College, MegaCorp"
 
+    = ep.input :current_position,
+               label: "Current position",
+               placeholder: "e.g. Senior consultant"
+
     = ep.input :career_sector,
                label: "Industry sector",
                placeholder: "e.g. Financial Services"
