--- a/app/views/etkh_profiles/our_members.html.haml
+++ b/app/views/etkh_profiles/our_members.html.haml
@@ -4,6 +4,7 @@
   %hr
 
   #search-form
+    = render partial: 'search_form'
 
   #members-list
     = render partial: 'profiles_selection', locals: { users: @selected_users }
