--- a/app/views/etkh_profiles/_search_form.html.haml
+++ b/app/views/etkh_profiles/_search_form.html.haml
@@ -1,7 +1,11 @@
-= form_tag('/members/search', :class => 'form-horizontal') do
-  .control-group
-    %label.control-label{ for: 'prependedInput'}
-      Search by name
-    .controls
-      .input-prepend
-        = '<span class="add-on"><i class="icon-search"></i></span>'.html_safe + (text_field_tag 'name', '', :placeholder => 'search by name', :id => 'prependedInput', :"data-provide"=>"typeahead", :"data-source"=>"#{@profiles.map{|p| p.user.name}}").html_safe
+= form_tag('members/search', remote: true) do
+  = text_field_tag :name
+  = text_field_tag :location
+
+  = submit_tag "Search", name: nil, id: "search-btn"
+
+
+:javascript
+  $("#search-btn").click( function() {
+    $("#members-list").html("");
+  });
