--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -48,6 +48,7 @@
     .see-more { margin-left: 25px; }
 
     .section {
+      margin-top: 30px;
       padding-top: 15px;
       padding-right: 50px;
       .title {
